# CMIP6_CVs

./: .gitignore  AMIP1&2_source_id.json  AMIP_source_id.json  CITATION.cff  CMIP1&2_source_id.json  CMIP2_source_id.json  CMIP6_DRS.json  CMIP6_activity_id.json  CMIP6_coordinate.json  CMIP6_experiment.json  CMIP6_experiment_id.json  CMIP6_formula_terms.json  CMIP6_frequency.json  CMIP6_grid.json  CMIP6_grid_label.json  CMIP6_grid_resolution.json  CMIP6_institution.json  CMIP6_institution_id.json  CMIP6_license.json  CMIP6_mip_era.json  CMIP6_nominal_resolution.json  CMIP6_realm.json  CMIP6_required_global_attributes.json  CMIP6_source_id.json  CMIP6_source_type.json  CMIP6_sub_experiment_id.json  CMIP6_table_id.json  CMIP6_variable.json  README.md  attr_specs.yaml  catalog_specs.yaml  drs_specs.yaml  mip_era.json  project_specs.json  project_specs.yaml  pyproject.toml  writeJson.py
.github/: ISSUE_TEMPLATE.md  Institution_registration_template.md  Model_registration_template.md  PULL_REQUEST_TEMPLATE.md  RegistrationGuidance.md  other_issues_template.md
Conventions/: 000_context.jsonld  cf-1.7_cmip-6.2.json
Tables/: .directory  AmonTable_MissingVariables.json  CMIP6_3hr.json  CMIP6_6hrLev.json  CMIP6_6hrPlev.json  CMIP6_6hrPlevPt.json  CMIP6_AERday.json  CMIP6_AERhr.json  CMIP6_AERmon.json  CMIP6_AERmonZ.json  CMIP6_Amon.json  CMIP6_CF3hr.json  CMIP6_CFday.json  CMIP6_CFmon.json  CMIP6_CFsubhr.json  CMIP6_CV.json  CMIP6_CV.json~  CMIP6_E1hr.json  CMIP6_E1hrClimMon.json  CMIP6_E3hr.json  CMIP6_E3hrPt.json  CMIP6_E6hrZ.json  CMIP6_Eday.json  CMIP6_EdayZ.json  (+26 more)
(+2413 files in other folders)
