[project]
name = "cmip6cvs"
version = "0.1.0"
description = "code to translate main branch into esgvoc branch"
authors = [
    { name = "TROUSSELLIER Laurent", email = "laurent.troussellier@ipsl.fr" }
]
dependencies = [
    "esgvoc>=1.0.0",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "esgvoc>=1.0.0",
    "pytest>=8.3.4",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.rye.scripts]
hello = {cmd = ["python","hello.py"]}
#
# [tool.uv.sources]
# esgvoc = { git = "https://github.com/ESGF/esgf-vocab.git", branch = "integration" }
